fixed header, just need to align form fields

--- a/public/css/style-addAlbumJS.css
+++ b/public/css/style-addAlbumJS.css
@@ -15,6 +15,7 @@
 	height: 595px;
 	width: 1000px;
 	flex-direction: column;
+	justify-content: space-between;
 }
 .wrap{
 	display: flex;
@@ -32,11 +33,12 @@
 }
 .formWrapper{
 	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
+	
+
 }
 #albumTitle{
+	display: flex;
+	flex-direction: column;
 	font-size: 20px;
 }
 #albumGenre{
@@ -52,6 +54,8 @@
 	font-size: 20px;	
 }
 #artistName{
+	display: flex;
+	flex-direction: column;
 	font-size: 20px;
 }
 #artistCity{
@@ -74,5 +78,9 @@
 	display: none;
 	font-size: 20px;	
 }
+#submitButton{
+	display: none;
+}
 .headerContainer{
+	flex-direction: row;
 }
